--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "celebrate": "^12.1.1",
     "class-transformer": "^0.2.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
