--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "celebrate": "^12.1.1",
     "class-transformer": "^0.2.3",
+    "cors": "^2.8.5",
     "d3-array": "^2.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.6",
     "@types/d3-array": "^2.0.0",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
